# hdnum-examples

./: .gitignore  .gitpod.yml  markdown-notebooks.html  markdown.html  notebooks.html  run.sh  searchindex.js
.github/workflows/: book.yml  examples.yml  pages.yml
hdnum-book/: intro.md  notebooks.ipynb  pyproject.toml
notebook/: gnuplot.ipynb  matrices.ipynb  multiprecision.ipynb  timewatcher.ipynb  vector.ipynb
src/: CMakeLists.txt
src/doc-examples/: CMakeLists.txt  gnuplot.cc  matrices.cc  multiprecision.cc  timewatcher.cc  vector.cc
src/examples/: CMakeLists.txt  timewatcher.cc
src/hdnum-examples/: CMakeLists.txt
src/hdnum-examples/num0/: CMakeLists.txt  corona.cc  ellipse.cc  integralgleichung.cc  lr.cc  lr_opcount.cc  matrizen.cc  precision.cc  qr_gram_schmidt.cc  vektoren.cc  wurzel.cc  wurzelbanach.cc
src/hdnum-examples/num1/: CMakeLists.txt  ecke.cc  eemodelproblem.cc  expliciteuler.hh  fem1d_linear.cc  fem1d_quadratic.cc  figureeight.hh  hodgkinhuxley.cc  hodgkinhuxley.hh  iemodelproblem.cc  laplace.hh  linearoscillator.cc  lorenz.hh  modelproblem.cc  modelproblem.hh  modelproblem_high_dim.cc  modelproblem_high_dim.hh  modelproblem_ordertest.cc  modelproblem_runge_kutta.cc  nbody.cc  nbody.hh  ordertest.cc  restricted3BP.hh  system_example.cc  system_example.hh  threebody.hh  twobody.hh  vanderpol.cc
src/hdnum-examples/progkurs/: CMakeLists.txt  ausgabe.cc  classes.cc  eingabe.cc  funktion.cc  gaussseidel.cc  hallohdnum.cc  matrizen.cc  matrizen2.cc  mehrzahlen.cc  operationen.cc  pendel.cc  pendel.gnu  pendelmitfunktion.cc  pendelmitfunktionstemplate.cc  pendelmittimer.cc  pendelnumerisch.cc  pendelwhile.cc  string.cc  vektoren.cc  vektoren2.cc  whitespace.cc  zahlen.cc
