[tool.poetry]
name = "hdnum-examples"
version = "0.1.0"
description = "HDNUM book"
authors = ["Carlos Aznarán <caznaranl@uni.pe>"]
license = "GPL2"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
